# FIT4701

./: .gitattributes  .gitignore  .gitmodules  TODO.md  large_data.m  main.py  radar_and_moisture_preprocessed.pkl  requirements.txt
bluetooth_tools/: main.py
data/: 20231030.h5  20231030_radarfoot_box_data.xlsx  radar_and_moisture_preprocessed.backup.pkl
data_analysis/: large_data.m  miscellaneous.py
data_analysis/data_files/: __init__.py
data_analysis/subcommands/: __init__.py  model.py
data_files/: common.py  environments_excel.py  radar_h5.py
hardware/: Cargo.toml  README.md
hardware/.cargo/: config.toml
hardware/src/: main.rs
server/: example_model.py  main.py
stm_sandbox/: .gitignore  Cargo.toml  README.md  build.rs  memory.x
stm_sandbox/.cargo/: config.toml
stm_sandbox/src/: main.rs
stm_sandbox_2/: Cargo.toml
stm_sandbox_2/.cargo/: config.toml
stm_sandbox_2/src/: main.rs
subcommands/: __init__.py  common.py  model.py  pca.py  plot.py  versus.py
subcommands/plot/: __init__.py  pca.py  versus.py
