[package]
edition = "2021"
name = "hardware"
version = "0.1.0"

[dependencies]
embassy-stm32 = { version = "0.1.0", path = "embassy/embassy-stm32", features = [ "defmt", "stm32wb55rg", "time-driver-any", "memory-x", "exti"] }
embassy-stm32-wpan = { version = "0.1.0", path = "embassy/embassy-stm32-wpan", features = ["defmt", "stm32wb55rg"] }
embassy-sync = { version = "0.6.0", path = "embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.6.0", path = "embassy/embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", path = "embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-net = { version = "0.4.0", path = "embassy/embassy-net", features = ["defmt", "udp", "proto-ipv6", "medium-ieee802154", ], optional=true }

a121-rs = { version = "0.1.3", features = ["distance", "defmt", "libm"] }
tinyrlibc = { version = "0.4.0", features = ["alloc"] }
talc = { version = "4.2", default-features = false, features = ["lock_api"] }
spin = "0.9.8"
embedded-hal-bus = { version = "0.1.0", features = ["defmt-03"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2"

[features]
default = ["ble", "mac"]
mac = ["embassy-stm32-wpan/mac", "dep:embassy-net"]
ble = ["embassy-stm32-wpan/ble"]

[profile.release]
debug = 2
