[package]
name = "stm_sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
nucleo-f446re = "0.1.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embedded-hal = "0.2.7"
switch-hal = "0.4.0"
stm32f4xx-hal = { version = "0.13.2", features = ["stm32f446"]}

# Supposed to be [dev-dependencies]
cortex-m-rt = "0.7.1"
panic-probe = { version = "0.3.0", features = ["print-rtt"] }
rtt-target = "0.5.0"
