[package]
name = "stm_sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
rtt-target = "0.5.0"
embedded-hal = "0.2.7"
stm32f4xx-hal = { version = "0.21.0", features = ["stm32f446"]}
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
switch-hal = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-rtt"] }
panic-halt = "0.2.0"
