[package]
name = "stm_sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
rtt-target = "0.5.0"
embedded-hal = "1.0.0"
stm32f4xx-hal = { version = "0.21.0", features = ["stm32f446"]}
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
panic-probe = { version = "0.3.0", features = ["print-rtt"] }
panic-halt = "0.2.0"
a121-rs = "0.1.3"
embedded-hal-bus = "0.2.0"

[build-dependencies]
copy_to_output = "2.1.0"
